Fix entry_name alignment in bottle details

--- a/src/ui/style.css
+++ b/src/ui/style.css
@@ -156,6 +156,7 @@
 }
 
 .no-padding {
+  margin: 0;
   padding: 0;
 }
 
@@ -163,4 +164,8 @@
   font-family: "Cantarell", sans-serif;
   font-size: 21;
   font-weight: bold;
+}
+
+entry.heading_1 {
+  margin: 0 0 0 -8px;
 }
